--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">My Application0310</string>
-    <string name="greeting">Hello ST?</string>
+    <string name="greeting">Hello 201921096SB?</string>
 </resources>
